fix chat z-index

--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -57,7 +57,6 @@
   flex-direction: column;
   justify-content: flex-end;
   align-items: flex-end;
-  z-index: 999;
   border-radius: 24px;
   box-shadow: rgba(255, 255, 255, 0.2) 0px 0px 0px 1px inset,
     rgba(0, 0, 0, 0.1) 0px 4px 6px, rgba(0, 0, 0, 0.15) 0px 8px 30px;
@@ -189,7 +188,7 @@
 
   to {
     opacity: 0;
-    transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 10%, 0);
   }
 }
 
